@@ -16,6 +16,7 @@ Overview of changes in lightdm 1.1.0
     * Start authentication when scrolling through GTK greeter entries
     * Link liblightdm-qt against QtGui
     * Fix liblightdm-qt crashing when face images are installed
+    * Set correct permissions on session log files
 
 Overview of changes in lightdm 1.0.0
 
